--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,13 +7,15 @@ pidfile=/tmp/supervisord.pid
 nodaemon=false
 minfds=1024
 minprocs=200
-user=jenkins
 
 [program:flaskapp]
-command=/path/to/venv/bin/python /path/to/your/app/run.py
+command=/home/www/.jenkins/workspace/pythonApi/venv/bin/python /home/www/.jenkins/workspace/pythonApi/run.py
 autostart=true
 autorestart=true
 startsecs=10
 startretries=3
 stderr_logfile=/var/log/flaskapp.err.log
 stdout_logfile=/var/log/flaskapp.out.log
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock ; use a Unix domain socket
