--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,6 +7,7 @@ pidfile=/tmp/supervisord.pid
 nodaemon=false
 minfds=1024
 minprocs=200
+user=root
 
 [program:flaskapp]
 command=/home/www/.jenkins/workspace/pythonApi/venv/bin/python /home/www/.jenkins/workspace/pythonApi/run.py
