--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,7 +7,6 @@ pidfile=/tmp/supervisord.pid
 nodaemon=false
 minfds=1024
 minprocs=200
-user=root
 
 [program:flaskapp]
 command=/home/www/.jenkins/workspace/pythonApi/venv/bin/python /home/www/.jenkins/workspace/pythonApi/run.py
@@ -17,6 +16,7 @@ startsecs=10
 startretries=3
 stderr_logfile=/var/log/flaskapp.err.log
 stdout_logfile=/var/log/flaskapp.out.log
+user=root
 
 [supervisorctl]
-serverurl=unix:///tmp/supervisor.sock ; use a Unix domain socket
+serverurl=unix:///tmp/supervisor.sock
