--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# pip install -r requirements.txt
+
 Flask==2.0.2
 Werkzeug==2.0.2
+Flask-RESTx==0.5.1
+# flask_restplus==0.13.0
 # supervisor==4.2.5
